# csplendor

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.en.md  README.md  pyproject.toml  setup.py  test_payment.py  test_perf.py  test_rules.py
.github/workflows/: ci.yml
csplendor/: __init__.py  action_space.py  features.py
csplendor/api/: ai_manager.py  app.py  replay.py  schemas.py  usi_kifu.py
doc/: KIFU.md  SOLVER.md  action_space_v2.md  action_space_v3.md  ai_engine_spec.md  api_ref.md  engine_specs.md  genbu_architecture.md  index.md  ml_integration.md  overview.md  tasks.md  web_api.md
docs/: architecture.md
scripts/: analyze_payment_patterns.py  benchmark.py  dfpn_mate_solver.py  mate_solver.py  reproduce_bug.py
src/: action.h  action_encoder.h  action_encoder_v2.h  action_encoder_v3.h  bindings.cpp  board.h  card_data.h  cli_utils.h  debug_print.cpp  game.h  mcts.h  mcts_searcher.h  move_generator.h  noble_data.h  player.h  resource_bundle.h  state_encoder.h  types.h  zobrist.h
tests/: test_api.py  test_board.py  test_determinization.py  test_dfpn_mate_solver.py  test_encoders.py  test_exchange.py  test_mate_solver.py  test_ml.py  test_payment.py  test_perf.py  test_random.py  test_rules.py  test_usi_kifu.py
